Revise introduction and quick start documentation for clarity and engagement. Updated the description of Open WebUI to clarify OpenAI API/function capablities.

--- a/docs/getting-started/quick-start/index.mdx
+++ b/docs/getting-started/quick-start/index.mdx
@@ -213,14 +213,20 @@ Now let's make it _yours_...
 
 Open WebUI needs something to talk to. Choose your path:
 
-| I want to... | Go here |
-|--------------|---------|
-| Run local models with **Ollama** | [Ollama Setup →](getting-started\quick-start\starting-with-ollama.mdx) |
-| Connect to **OpenAI** | [OpenAI Setup →](\getting-started\quick-start\starting-with-openai.mdx) |
-| Connect almost anything via OpenAI-Compatible API | [OpenAI-Compatible APIs →](\getting-started\quick-start\starting-with-openai-compatible.mdx) |
-| Connect to **Claude, Gemini**, or other providers via **Functions** | [Functions →](\getting-started\quick-start\starting-with-functions.mdx) |
+| Provider | Guide |
+|----------|-------|
+| **Ollama** — The easiest way to run models locally | [Ollama Setup →](/getting-started/quick-start/starting-with-ollama) |
+| **OpenAI** — Connect directly to OpenAI's latest models | [OpenAI Setup →](/getting-started/quick-start/starting-with-openai) |
+| **OpenAI-Compatible APIs** — Gemini, vLLM, Llama.cpp, LiteLLM, and any provider using the OpenAI format (local or remote) | [OpenAI-Compatible Setup →](/getting-started/quick-start/starting-with-openai-compatible) |
+| **Functions** — Direct API access to providers like Claude and Bedrock. Build custom tools, integrations, and pipelines. | [Functions Setup →](/getting-started/quick-start/starting-with-functions) |
 
-_See sidebar for additional connectivity options._
+:::tip Not sure which to choose?
+You only need one to get started—pick whichever fits your setup today. **Ollama** is the fastest path to local models. **OpenAI-Compatible** works with most providers, local or cloud. **Functions** for providers without OpenAI-compatible endpoints, or when you want to build something custom.
+
+The best part? Mix and match later. Add more providers anytime.
+:::
+
+_See provider specific connectivity guides in the sidebar._
 
 ---
 
