--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -42,19 +42,17 @@ Get **enhanced capabilities**, including **custom theming and branding**, **Serv
 
 ## What is Open WebUI?
 
-A self-hosted AI platform that puts you in control of the entire stack.
+The operating system for AI—self-hosted, extensible, and entirely yours.
 
-Connect to local models through [Ollama](getting-started\quick-start\starting-with-ollama.mdx), remote providers through [OpenAI-compatible APIs](getting-started\quick-start\starting-with-openai-compatible.mdx), or use [Functions](docs\getting-started\quick-start\starting-with-functions.mdx) to connect directly to Anthropic, Google, and others—all through a single interface you own. Swap providers on the fly without changing workflows. Your conversations, your documents, your prompts—they stay yours.
+Open WebUI is where you bring your AI stack together. Connect any model—local or cloud, open or proprietary—and interact with them through one interface you control. Chat, generate images, talk with voice, search the web, ground responses in your own documents. Add more capabilities when you need them. Remove what you don't.
 
-Open WebUI handles more than chat. Image generation through [ComfyUI](features\image-generation-and-editing\comfyui.md) or [AUTOMATIC1111](features\image-generation-and-editing\automatic1111.md) (or external services like Gemini, DALL-E, and more). Speech-to-text. Voice synthesis. [RAG pipelines](features\rag\index.md) over your documents. One platform, one interface—whether you're running everything locally or routing to external services.
+Run it on your laptop for personal use. Deploy it for your team with roles and permissions. Scale it across your organization. The platform adapts to how *you* work, not the other way around.
 
-Run it as a server and access it securely across all your devices. Add users when you're ready. Set permissions. Keep everything on infrastructure you control.
+Everything stays on your infrastructure. Your conversations, your documents, your data—none of it leaves unless you choose to connect to external services. We don't phone home. We don't know what you're building. That's the point.
 
-**You decide what stays local and what reaches out.** Air-gap it completely, connect only to local models, or mix local and cloud providers based on sensitivity. The platform doesn't phone home—what you connect it to is always your call.
+**Private by default. Connected by choice.**
 
-[Explore all features →](/features)
-
-[Ready to get started? →](\getting-started\index.md)
+[Explore all features →](/features) · [Get started →](/getting-started)
 
 ---
 
