--- a/docs/getting-started/env-configuration.mdx
+++ b/docs/getting-started/env-configuration.mdx
@@ -3949,22 +3949,7 @@ Strictly return in JSON format:
 
 :::tip
 
-One minimalistic working setup for Gemini can look like this:
-
-- Create Image
-  - Model: `gemini-2.5-flash-image`
-  - Image Size: `2816x1536`
-  - Image Prompt Generation: on
-  - Image Generation Engine: `Gemini`
-  - Gemini Base URL: `https://generativelanguage.googleapis.com/v1beta`
-  - Gemini API Key: Enter your API Key
-  - Gemini Endpoint Method: `generateContent`
-- Edit Image
-  - Image Edit Engine: `Gemini`
-  - Model: `gemini-2.5-flash-image`
-  - Image Size: (can be left empty)
-  - Gemini Base URL: `https://generativelanguage.googleapis.com/v1beta`
-  - Gemini API Key: Enter your API Key
+For a detailed setup guide and example configuration, please refer to the [Gemini Image Generation Guide](/features/image-generation-and-editing/gemini).
 
 :::
 
