--- a/docs/features/index.mdx
+++ b/docs/features/index.mdx
@@ -41,7 +41,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 - 🌐 **Web Browsing Capabilities**: Integrate websites seamlessly into your chat experience by using the `#` command followed by a URL. This feature enables the incorporation of web content directly into your conversations, thereby enhancing the richness and depth of your interactions.
 
-- 🎨 **Image Generation & Editing Integration**: Seamlessly create and edit images using multiple engines including OpenAI's DALL-E (generation and editing), Gemini (generation and editing), ComfyUI (local, generation and editing), and AUTOMATIC1111 (local, generation). Support for both text-to-image generation and prompt-based image editing workflows with dynamic visual content. [Learn more about Image Gen](/category/create--edit-images).
+- 🎨 **Image Generation & Editing Integration**: Seamlessly create and edit images using multiple engines including OpenAI's DALL-E, Gemini, ComfyUI, and AUTOMATIC1111. Open WebUI now supports **Image Compositing** and **Image Editing** (inpainting/editing), allowing you to transform existing images and refine your creations with ease. [Learn more about Image Gen](/category/create--edit-images).
 
 - ⚙️ **Concurrent Model Utilization**: Effortlessly engage with multiple models simultaneously, harnessing their unique strengths for optimal responses. Leverage a diverse set of model modalities in parallel to enhance your experience.
 
